# SmallCryptoLib

./: CMakeLists.txt  Readme.md  YAFC.cpp  YAFC.h  YAFC.hpp  block_cipher.h  misc.cpp  misc.h  modes.h  modes.hpp  paddings.cpp  paddings.h  paddings.hpp  task1.cpp  task2.cpp  task3.cpp
